2006-07-18  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for memory leak in bug #209254

	* e-msg-composer.c: (e_msg_composer_show_help), (init): Used constant
	string for help.

2006-07-17  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #209254
	
	* e-msg-composer.c: (destroy): Check the memory corruption due to
	previous commit.	

2006-07-14  Arvind <sa.phoenix@gmail.com>

	** Fixes bug #209254
	
	* e-msg-composer.c: (menu_help_cb), (destroy),
	(e_msg_composer_show_help), (init): initiated help when clicked 
	help menu

2006-06-12  Parthasarathi Susarla <sparthasarathi@novell.com>

	Fixes bug #177416 on bnc

	* e-msg-composer.c (attachment_guess_mime_type): initialise type
	to "" and not NULL.

2006-05-26  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (drop_action): If 'str' is empty, continue
	immediately rather than trying to parse it as a URL.

2006-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (drop_action): Instead of g_free()ing 'str' in
	the if and else blocks, just g_free it after the if-else block.

	* e-msg-composer-select-file.c (select_attach_response): Replace
	'if (!filename)' with 'if (filename)', fixes a bug in Srini's
	patch.

	* e-msg-composer-hdrs.c (header_new_recipient): Set the visible
	field to FALSE.

2006-05-25  Srinivasa Ragavan  <sragavan@novell.com>

	* e-msg-composer-select-file.c (get_selector),
	(select_attach_response): Added support to attach from remote
	shares

	* e-msg-composer.c (add_to_bar, drop_action): Added support to
	attach from remote shares

2006-03-09  Sam Yang  <sam.yang@sun.com>

	** Fixes #333971

	* e-msg-composer.c (e_msg_composer_insert_paragraph_after): Remove
	text-default-color command that resets customized text color to
	default, so stops composer color combo from receiving signal to
	refresh color preview when inserting a new line.

2006-04-24  Srinivasa Ragavan  <sragavan@novell.com>

	Adding support for ENameSelectorList in composer. It is a enhanced